--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="promotional">
       <figure>
         <video controls>
-          <source src="videos/real-estate.mp4" type="video/mp4"> 
+          <source src="videos/real-estate.mp4" type="video/mp4">
           <source src="videos/real-estate.ogv" type="video/ogg">
           Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
         </video>
@@ -55,7 +55,7 @@
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
-          <a href="#" target="_blank">Afordable Mortgages</a><br>
+          <a href="#" target="_blank">Affordable Mortgages</a><br>
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
